# shooting_2D

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
src/: background.cpp  background.h  bullet.cpp  bullet.h  controller.cpp  controller.h  defs.h  explosion.cpp  explosion.h  fighter.cpp  fighter.h  game.cpp  game.h  gameobject.cpp  gameobject.h  gametext.cpp  gametext.h  main.cpp  renderer.cpp  renderer.h  sprite.cpp  sprite.h
